--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -1,3 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.lazyload-image {
+  @apply block;
+  background: transparent url("@/assets/images/empty-image.png") no-repeat
+    center center scroll;
+  background-size: contain;
+}
