--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -12,16 +12,15 @@
   <nav>
     <div class="nav-wrapper max-w-screen-xl mx-auto">
       <div class="nav-container lg:flex justify-between items-center">
-        <a href="">JSGuru Technical Blog</a>
-        <a href="">Logo</a>
-        <ul class="lg:flex">
-          <li class="ml-2"><a class="px-4 py-8 text-gray-500 capitalize" href="">NestJS Tutorial</a>
-          </li>
-          <li class="ml-2"><a href="">Link 2</a></li>
-          <li class="ml-2"><a href="">Link 3</a></li>
-          <li class="ml-2"><a href="">Link 4</a></li>
-          <li class="ml-2"><a href="">Link 5</a></li>
-        </ul>
+        <a class="nav-brand h-16" href=""><img src="../assets/images/nodepress-logo.png" alt="nodepress" /></a>
+        <div class="lg:flex">
+          <a class="px-4 py-4 leading-4 text-gray-500 capitalize" href="">Why NodePress?</a>
+          <a class="px-4 py-4 leading-4 text-gray-500 capitalize" href="">Showcase</a>
+          <a class="px-4 py-4 leading-4 text-gray-500 capitalize" href="">Learn</a>
+          <a class="px-4 py-4 leading-4 text-gray-500 capitalize" href="">Themes</a>
+          <a class="px-4 py-4 leading-4 text-gray-500 capitalize" href="">Plugins</a>
+          <a class="px-4 py-4 leading-4 text-gray-500 capitalize" href="">Support</a>
+        </div>
       </div>
     </div>
   </nav>
