--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -9,23 +9,24 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 </head>
 
-<body class="pt-20">
-  <nav class="fixed top-0 left-0 right-0 bg-white">
+<body class="pt-24">
+  <nav class="fixed top-0 left-0 right-0 bg-white border-b drop-shadow-md">
     <div class="nav-wrapper max-w-screen-xl mx-auto">
       <div class="nav-container p-4 flex flex-wrap justify-between items-center">
-        <a class="nav-brand inline-block"><img class="h-8 lg:h-16" src="../assets/images/nodepress-logo.png"
+        <a class="nav-brand inline-block"><img class="h-16" src="../assets/images/nodepress-logo.png"
             alt="nodepress" /></a>
-        <a id="nav-menu-toggle" class="lg:hidden"><span class="material-icons">menu</span></a>
-        <div class="border-b basis-full mt-4"></div>
-        <div id="nav-menu" class="nav-menu basis-full flex flex-wrap h-0 overflow-hidden transition duration-100">
-          <a class="basis-full px-4 py-4 leading-4 font-semibold text-gray-500 capitalize hover:text-primary"
+        <a id="nav-menu-toggle" class="md:hidden"><span class="material-icons">menu</span></a>
+        <!-- <div class="border-b basis-full md:hidden mt-2"></div> -->
+        <div id="nav-menu"
+          class="nav-menu flex flex-wrap basis-full md:basis-auto h-0 md:h-auto overflow-hidden transition duration-100">
+          <a class="basis-full md:basis-auto px-4 py-4 leading-4 font-semibold text-gray-500 capitalize hover:text-primary"
             href="">Why
             NodePress?</a>
-          <a class="basis-full px-4 py-4 leading-4 text-gray-500 capitalize" href="">Showcase</a>
-          <a class="basis-full px-4 py-4 leading-4 text-gray-500 capitalize" href="">Learn</a>
-          <a class="basis-full px-4 py-4 leading-4 text-gray-500 capitalize" href="">Themes</a>
-          <a class="basis-full px-4 py-4 leading-4 text-gray-500 capitalize" href="">Plugins</a>
-          <a class="basis-full px-4 py-4 leading-4 text-gray-500 capitalize" href="">Support</a>
+          <a class="basis-full md:basis-auto px-4 py-4 leading-4 text-gray-500 capitalize" href="">Showcase</a>
+          <a class="basis-full md:basis-auto px-4 py-4 leading-4 text-gray-500 capitalize" href="">Learn</a>
+          <a class="basis-full md:basis-auto px-4 py-4 leading-4 text-gray-500 capitalize" href="">Themes</a>
+          <a class="basis-full md:basis-auto px-4 py-4 leading-4 text-gray-500 capitalize" href="">Plugins</a>
+          <a class="basis-full md:basis-auto px-4 py-4 leading-4 text-gray-500 capitalize" href="">Support</a>
         </div>
       </div>
     </div>
