--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,16 +1,18 @@
 </main>
-<footer>
+<footer class="bg-gray-100 py-8">
   <div class="container">
-    <div>
-      <a href="">Social 1</a>
-      <a href="">Social 2</a>
-      <a href="">Social 3</a>
+    <div class="text-center">
+      <a href=""><span class="material-icons text-4xl">facebook</span></a>
+      <a href=""><span class="material-icons text-4xl">smart_display</span></a>
     </div>
-    <div>
-      jsguru.net - 2022 - NestJS Tutorial
+    <div class="text-center text-lg py-4">
+      Copyright @ nodepress 2022
     </div>
-    <div>
-      NestJS-CMS powered - Theme by jsguru.net - Build Version 202201302230
+    <div class="text-center text-sm">
+      Powered by <a class="font-bold text-primary" href="https://github.com/jsguru-net/nodepress">NodePress</a> - Made
+      with love from <a class="font-bold text-primary" href="https://github.com/jsguru-net/nodepress">jsguru.net</a> -
+      Build
+      Version 202201302230
     </div>
   </div>
 </footer>
