--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -7,5 +7,27 @@
 @tailwind components;
 @tailwind utilities;
 
-.nav-brand {
+.container {
+  @apply max-w-screen-xl px-4 py-4 mx-auto;
+}
+
+.nav-menu {
+  @apply flex flex-wrap basis-full md:basis-auto overflow-hidden;
+  &-link {
+    @apply basis-full md:basis-auto px-4 py-4 leading-4 font-semibold text-gray-500 capitalize hover:text-primary;
+  }
+}
+
+.block {
+  @apply container text-center;
+  @apply py-8;
+}
+
+.hero-block {
+  &-heading {
+    @apply text-3xl font-heading font-bold mb-4;
+  }
+  &-content {
+    @apply leading-6 text-lg;
+  }
 }
