Add sample page content

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -9,22 +9,21 @@
   <script defer src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 </head>
 
-<body class="pt-24">
-  <nav class="fixed top-0 left-0 right-0 bg-white border-b drop-shadow-md">
+<body class="body-nav-fixed">
+  <nav class="nav-fixed nav-default">
     <div class="container">
       <div class="nav-container flex flex-wrap justify-between items-center">
-        <a class="nav-brand inline-block"><img class="h-16" src="../assets/images/nodepress-logo.png"
+        <a href="./" class="nav-brand inline-block"><img class="h-16" src="../assets/images/nodepress-logo.png"
             alt="nodepress" /></a>
         <a id="nav-menu-toggle" class="md:hidden"><span class="material-icons">menu</span></a>
         <!-- <div class="border-b basis-full md:hidden mt-2"></div> -->
         <div id="nav-menu" class="nav-menu h-0 md:h-auto">
-          <a class="nav-menu-link" href="">Why
-            NodePress?</a>
-          <a class="nav-menu-link" href="">Showcase</a>
-          <a class="nav-menu-link" href="">Learn</a>
-          <a class="nav-menu-link" href="">Themes</a>
-          <a class="nav-menu-link" href="">Plugins</a>
-          <a class="nav-menu-link" href="">Support</a>
+          <a class="nav-menu-link" href="./page.html">Why NodePress?</a>
+          <a class="nav-menu-link" href="./page.html">Showcase</a>
+          <a class="nav-menu-link" href="./page.html">Learn</a>
+          <a class="nav-menu-link" href="./page.html">Themes</a>
+          <a class="nav-menu-link" href="./page.html">Plugins</a>
+          <a class="nav-menu-link" href="./page.html">Support</a>
         </div>
       </div>
     </div>
