--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -43,11 +43,17 @@
 }
 
 .card-post {
+  &-default {
+    @apply overflow-hidden rounded-lg shadow-lg;
+  }
   &-title {
     @apply text-lg font-heading font-semibold;
   }
   &-category {
     @apply text-sm text-gray-500 hover:text-primary;
+  }
+  &-image {
+    @apply object-cover w-full h-48;
   }
   &-date {
     @apply text-sm;
@@ -57,5 +63,30 @@
   }
   &-readmore-link {
     @apply font-bold hover:text-primary;
+  }
+}
+
+.pagination {
+  @apply bg-white py-3 flex items-center justify-between;
+  &-prev {
+    @apply relative inline-flex items-center px-4 py-2 border border-gray-300 text-sm font-medium rounded-md text-gray-700 bg-white hover:bg-gray-50;
+  }
+  &-next {
+    @apply ml-3 relative inline-flex items-center px-4 py-2 border border-gray-300 text-sm font-medium rounded-md text-gray-700 bg-white hover:bg-gray-50;
+  }
+  &-mobile {
+    @apply flex-1 flex justify-between sm:hidden;
+  }
+  &-desktop {
+    @apply hidden sm:flex-1 sm:flex sm:items-center sm:justify-between;
+  }
+  &-pager {
+    @apply relative z-0 inline-flex rounded-md shadow-sm -space-x-px;
+    &-prev {
+      @apply relative inline-flex items-center px-2 py-2 rounded-l-md border border-gray-300 bg-white text-sm font-medium text-gray-500 hover:bg-gray-50;
+    }
+    &-next {
+      @apply relative inline-flex items-center px-2 py-2 rounded-r-md border border-gray-300 bg-white text-sm font-medium text-gray-500 hover:bg-gray-50;
+    }
   }
 }
