--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -83,10 +83,19 @@
   &-pager {
     @apply relative z-0 inline-flex rounded-md shadow-sm -space-x-px;
     &-prev {
-      @apply relative inline-flex items-center px-2 py-2 rounded-l-md border border-gray-300 bg-white text-sm font-medium text-gray-500 hover:bg-gray-50;
+      @apply h-10 px-5 text-gray-600 transition-colors duration-150 bg-white rounded-l-lg hover:bg-lime-100 py-2;
     }
     &-next {
-      @apply relative inline-flex items-center px-2 py-2 rounded-r-md border border-gray-300 bg-white text-sm font-medium text-gray-500 hover:bg-gray-50;
+      @apply h-10 px-5 text-gray-600 transition-colors duration-150 bg-white rounded-r-lg hover:bg-lime-100 py-2;
+    }
+    &-link {
+      @apply h-10 px-5 text-gray-600 transition-colors duration-150 bg-white hover:bg-lime-100 py-2;
+    }
+    &-span {
+      @apply h-10 px-5 text-gray-600 transition-colors duration-150 bg-white py-2;
+    }
+    &-active-link {
+      @apply h-10 px-5 text-white transition-colors duration-150 bg-primary py-2;
     }
   }
 }
