add news section

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -7,6 +7,42 @@
 @tailwind components;
 @tailwind utilities;
 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  @apply font-heading font-bold;
+}
+
+h6 {
+  @apply text-xs;
+}
+h5 {
+  @apply text-xs;
+}
+h4 {
+  @apply text-sm;
+}
+h3 {
+  @apply text-base;
+}
+h2 {
+  @apply text-2xl;
+}
+h1 {
+  @apply text-3xl;
+}
+
+.clearfix:after {
+  clear: both;
+  content: ".";
+  display: block;
+  width: 0px;
+  height: 0px;
+}
+
 .container {
   @apply max-w-screen-xl px-4 py-4 mx-auto;
 }
@@ -43,11 +79,9 @@
 }
 
 .card-post {
+  @apply p-2;
   &-default {
     @apply overflow-hidden rounded-lg shadow-lg;
-  }
-  &-title {
-    @apply text-lg font-heading font-semibold;
   }
   &-category {
     @apply text-sm text-gray-500 hover:text-primary;
