Update landing page lastest post and category tags

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -10,7 +10,7 @@
 </head>
 
 <body class="body-nav-fixed">
-  <nav class="nav-fixed nav-default">
+  <nav class="nav-fixed nav-default z-50">
     <div class="container">
       <div class="nav-container flex flex-wrap justify-between items-center">
         <a href="./" class="nav-brand inline-block"><img class="h-16" src="../assets/images/nodepress-logo.png"
